# LMS

./: .gitignore  Makefile  docker-compose.yaml
backend/: conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2356107a3f36_update_usermodel_first_name_to_have_a_.py  2f69f9cfc438_update_add_status_enum.py  387cccd46442_update_aggregate_ids_to_have_a_position_.py  7411859a2cdc_add_join_table.py  849961d9691b_make_all_models_with_a_title_column_.py  a6d496c6a4cf_initial_schema.py  c6b261ed4b78_make_passwords_optional_preparation_for_.py  da4752bdcbfa_fix_enum_case_to_lowercase.py
backend/src/: exceptions.py  main.py
backend/src/adapters/: base.py  lesson_repository.py  orm.py  question_repository.py  quiz_repository.py  training_path_repository.py  unit_of_work.py  user_repository.py
backend/src/api/: schemas.py
backend/src/core/: logging.py  security.py
backend/src/dependencies/: config.py  db.py
backend/src/domain/: enums.py  lesson.py  question.py  quiz.py  training_path.py  user.py
backend/src/services/: auth.py  email_service.py  enrollment_service.py  lesson_service.py  progress_service.py  question_service.py  quiz_service.py  training_path_service.py  user_service.py
backend/tests/: test_security.py
backend/tests/adapters/: test_repository.py
backend/tests/dependencies/: test_db.py
backend/tests/domain/: test_lesson.py  test_question.py  test_quiz.py  test_training_path.py  test_user.py
backend/tests/services/: test_enrollment_service.py  test_lesson_service.py  test_progress_service.py  test_question_service.py  (+3 more)
(+2 files in other folders)
